--- a/app/src/main/res/layout/movie_list_item.xml
+++ b/app/src/main/res/layout/movie_list_item.xml
@@ -1,34 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:clickable="true">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
+        android:layout_margin="16dp"
         android:orientation="horizontal">
 
-        <!--
+
         <ImageView
             android:id="@+id/poster_imageView"
             android:layout_width="40dp"
-            android:layout_height="match_parent"
-            android:layout_gravity="center_horizontal|top"/>
-        -->
-        <de.hdodenhof.circleimageview.CircleImageView
+            android:layout_height="40dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginRight="16dp"/>
+
+
+<!--        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/poster_imageView"
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:layout_marginEnd="16dp"
-            android:layout_marginRight="16dp"/>
+            android:layout_marginRight="16dp"
+            app:civ_border_width="1dp"
+            app:civ_border_color="@color/divider"/> -->
 
         <LinearLayout
             android:layout_width="match_parent"
