--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -10,10 +10,10 @@
     <android.support.design.widget.AppBarLayout
         android:id="@+id/detail_appBar"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="380dp"
+        android:elevation="4dp"
         android:fitsSystemWindows="true"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        android:elevation="4dp">
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
         <android.support.design.widget.CollapsingToolbarLayout
             android:id="@+id/detail_collapsingToolbar"
@@ -31,15 +31,27 @@
                 android:layout_height="match_parent"
                 android:fitsSystemWindows="true"
                 android:scaleType="centerCrop"
-                app:layout_collapseMode="parallax"
-                android:transitionName="shared_image"/>
+                android:transitionName="@string/poster_transition"
+                app:layout_collapseMode="parallax"/>
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/detail_toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                app:layout_collapseMode="pin"
-                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
+                android:layout_gravity="bottom"
+                android:background="@android:color/white"
+                app:layout_collapseMode="none"
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
+
+                <TextView
+                    android:id="@+id/title_toolbar_textView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/primary_text"
+                    android:textSize="20sp"
+                    android:transitionName="@string/title_transition"/>
+
+            </android.support.v7.widget.Toolbar>
 
 
         </android.support.design.widget.CollapsingToolbarLayout>
@@ -50,10 +62,10 @@
         android:layout_width="56dp"
         android:layout_height="56dp"
         android:layout_margin="@dimen/activity_horizontal_margin"
+        android:elevation="6dp"
         android:src="@drawable/ic_bookmark"
         app:layout_anchor="@id/detail_appBar"
-        app:layout_anchorGravity="bottom|right|end"
-        android:elevation="6dp"/>
+        app:layout_anchorGravity="bottom|right|end"/>
 
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
@@ -61,9 +73,10 @@
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <TextView
+            android:padding="32dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/lorem"/>
+            android:text="HERE GOES STUFF"/>
 
     </android.support.v4.widget.NestedScrollView>
 
